# cezizen

./: .gitignore  README.md  docker-compose.yml  sql_app.db
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd-dev.yml  cd-prod.yml  ci-backend.yml  ci-frontend.yml  ci-global.yml
.tools/: .env  Makefile  docker-compose.yml
CesiZenMobile/: Dockerfile  Dockerfile.dev  capacitor.config.ts  ionic.config.json  nginx.conf  package-lock.json  package.json
CesiZenMobile/android/: variables.gradle
CesiZenMobile/src/: global.scss  index.html  main.ts
Consignes/: 03_grille dévaluation Bloc 3 - Déployer et sécuriser les applications informatiques.xlsx
backend/: crud.py  database.py  main.py  models.py  requirements.txt  utils.py
backend/cesi_zen_api/: Dockerfile.dev  db.sqlite3  dockerfile  main.py  pyproject.toml  requirements.txt
backend/cesi_zen_api/api/: admin.py  models.py  serializer.py  views.py
backend/cesi_zen_api/api/migrations/: 0001_initial.py  0002_alter_breathingexercice_description.py  0003_article_image.py  0004_remove_breathingexercice_loop.py  0005_alter_article_content_alter_article_published_and_more.py
backend/cesi_zen_api/api/tests/: test_auth.py
backend/cesi_zen_api/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/cezi_zen_api/: db.sqlite3  dockerfile
docs/: deployment_procedure.md  local_initialisation.md  pra_procedure.md  rapport_evaluation_bloc3.md  vm_initialisation.md
frontend/: package-lock.json  package.json  vite.config.js
prometheus/: prometheus.yml
(+64 files in other folders)
