[project]
name = "cesi-zen-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asgiref==3.11.1",
    "django>=6.0,<7.0",
    "django-ckeditor==6.7.3",
    "django-cors-headers==4.9.0",
    "django-js-asset==3.1.2",
    "djangorestframework==3.17.1",
    "djangorestframework-simplejwt==5.5.1",
    "gunicorn>=21.2.0",
    "psycopg[binary]>=3.1.18",
    "pyjwt==2.13.0",
    "sqlparse==0.5.5",
    "tzdata==2026.3",
    "django-prometheus>=2.3.1",
]

[dependency-groups]
dev = [
    "ruff",
]
